discussion/kv_engine/168534/168534_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Add common warmup stats from one function

Rather than add them separately in two.

Change-Id: I37c97d10fe56e921bb27543eda493efb3afb91ba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 13:14:47.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 13:37:45.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14731/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1916:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const BucketStatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "BucketStatCollector" [clang-diagnostic-error]
    void addCommonStats(const BucketStatCollector& collector) const;
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14731/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1916:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14731/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36188/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.h:241:31:
error: unknown type name "BucketStatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36188/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13562/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13562/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4376/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4376/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4433/ : FAILURE

Compile error at [2022-01-11T13:17:22.048Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16392/ : FAILURE

Compile error at [2022-01-11T13:18:05.254Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16683/ : FAILURE

Compile error at [2022-01-11T13:17:47.391Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16683/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42703/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15536/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17476/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24804/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
